--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+body {
+  overflow-y: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.scrollbar-container {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100vh;
+  background-color: transparent;
+  z-index: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.linear-gradient {
+  background-image: linear-gradient(
+    to right,
+    hsla(259, 29%, 54%, 0.4),
+    hsla(353, 35%, 47%, 0.9)
+  );
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scrollbar-container::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: transparent;
 }
 
-.App-link {
-  color: #61dafb;
+.scrollbar-container::-webkit-scrollbar-track {
+  background-color: #52525b;
+  margin-bottom: 80px;
+  margin-top: 230px;
+  border-radius: 0.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.scrollbar-container::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(
+    to bottom,
+    hsl(0, 91%, 70%),
+    hsl(259, 76%, 70%)
+  );
+  height: 120px;
+  border-radius: 0.5rem;
+}
+
+h2 {
+  z-index: 10000;
+  overflow: visible;
 }
